--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
                     type: 'geojson',
                     data: data,
                     cluster: true,
-                    clusterMaxZoom: 14, // Max zoom level to cluster points on
-                    clusterRadius: 50   // Radius of each cluster when clustering points (defaults to 50)
+                    clusterMaxZoom: 15,
+                    clusterRadius: 50 
                 });
 
                 map.addLayer({
