--- a/nyc.html
+++ b/nyc.html
@@ -64,12 +64,12 @@
         });
 
         const collisionGeojsonFiles = {
-            2020: 'nyc_crashes_2020.geojson',
-            2021: 'nyc_crashes_2021.geojson',
-            2022: 'nyc_crashes_2022.geojson',
-            2023: 'nyc_crashes_2023.geojson',
-            2024: 'nyc_crashes_2024.geojson',
-            2025: 'nyc_crashes_2025.geojson'
+            2020: 'assets/nyc_crashes_2020.geojson',
+            2021: 'assets/nyc_crashes_2021.geojson',
+            2022: 'assets/nyc_crashes_2022.geojson',
+            2023: 'assets/nyc_crashes_2023.geojson',
+            2024: 'assets/nyc_crashes_2024.geojson',
+            2025: 'assets/nyc_crashes_2025.geojson'
         };
 
         const loadGeoJSON = async (file) => {
