--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 </head>
 
 <body>
-    // FOR NAVIGATION
+    <!-- FOR NAVIGATION -->
     <div class="topnav" id="myTopnav">
         <a class="active" href="index.html">Seattle</a>
         <a href="nyc.html">NYC</a>
@@ -171,7 +171,7 @@
             <i class="fa fa-bars"></i>
           </a>
     </div>
-    // END OF NAVIGATION
+    <!-- END OF NAVIGATION -->
     <div id="map"></div>
     <div id="controls">
         <h1>Seattle Traffic Flow</h1>
