--- a/index.html
+++ b/index.html
@@ -160,12 +160,10 @@
 <body>
     <!-- FOR NAVIGATION -->
     <div class="topnav" id="myTopnav">
+        <a href="intro.html">Introduction</a>
         <a class="active" href="index.html">Seattle</a>
         <a href="nyc.html">NYC</a>
-        <a href="section2.html">Section 2</a>
-        <a href="section3.html">Section 3</a>
-        <a href="see_also.html">See Also</a>
-        <a href="references.html">References</a>
+        <a href="conclusion.html">Conclusion</a>
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
         <a href="javascript:void(0);" class="icon">
             <i class="fa fa-bars"></i>
