--- a/nyc.html
+++ b/nyc.html
@@ -8,6 +8,83 @@
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.js"></script>
     <style>
+        /* NAVIGATION STYLING */
+        /* Add a black background color to the top navigation */
+        .topnav {
+          background-color: rgb(0, 0, 0);
+          overflow: hidden;
+        }
+
+        /* Style the links inside the navigation bar */
+        .topnav a {
+          float: left;
+          display: block;
+          color: #f2f2f2;
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+          font-size: 26px;
+        }
+
+        /* Change the color of links on hover */
+        .topnav a:hover {
+          background-color: #ddd;
+          color: black;
+        }
+
+        /* Add an active class to highlight the current page */
+        .topnav a.active {
+          background-color: #002fff;
+          color: white;
+        }
+
+        /* Hide the icon that should open and close the topnav on small screens */
+        .topnav .icon {
+          display: none;
+        }
+
+        /* Style for page content */
+        .content {
+          padding: 14px;
+          font-size: 22px;
+        }
+
+        /* When the screen is less than 800 pixels wide */
+        @media screen and (max-width: 800px) {
+          /* Hide all links, except for the selected tab */
+          .topnav a:not(.active) {
+            display: none;
+          }
+
+          /* Show the icon that should open and close the topnav */
+          .topnav a.icon {
+            float: right;
+            display: block;
+          }
+        }
+
+        /* When the screen is less than 800 pixels wide, if the user clicks on the icon */
+        /* the "responsive" class attribute will be added to the topnav by the JavaScript code */
+        /* This media query sets the style for the unfolded topnav */
+        /* It makes the topnav look good on small screens (display the links vertically instead of horizontally)  */
+        @media screen and (max-width: 800px) {
+          .topnav.responsive {
+            position: relative;
+          }
+
+          .topnav.responsive a.icon {
+            position: absolute;
+            right: 0;
+            top: 0;
+          }
+
+          .topnav.responsive a {
+            float: none;
+            display: block;
+            text-align: left;
+          }
+        }
+        /* END OF NAVIGATION STYLING */
         body, html {
             margin: 0;
             padding: 0;
@@ -16,13 +93,13 @@
         }
         #map {
             position: absolute;
-            top: 0;
+            top: 50px;
             bottom: 0;
             width: 100%;
         }
         #controls {
             position: absolute;
-            top: 30px;
+            top: 60px;
             left: 30px;
             background: rgba(255, 255, 255, 0.9);
             padding: 15px 20px;
@@ -46,6 +123,18 @@
     </style>
 </head>
 <body>
+     <!-- FOR NAVIGATION -->
+    <div class="topnav" id="myTopnav">
+        <a href="intro.html">Introduction</a>
+        <a href="index.html">Seattle</a>
+        <a class="active" href="nyc.html">NYC</a>
+        <a href="conclusion.html">Conclusion</a>
+        <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+        <a href="javascript:void(0);" class="icon">
+            <i class="fa fa-bars"></i>
+          </a>
+    </div>
+    <!-- END OF NAVIGATION -->
     <div id="map"></div>
     <div id="controls">
         <h1>New York City Collision Map</h1>
@@ -57,6 +146,28 @@
     </div>
     <script>
         mapboxgl.accessToken = 'pk.eyJ1IjoiZWR3YXJkcDciLCJhIjoiY2xzZjZhZnYwMGdrbDJpcXB6MzZsN2lzbSJ9.o11htKQkTmOqa1HNdhtenQ';
+        // FOR NAVIGATION
+        // Get the element with the class "icon"
+        let icon = document.getElementsByClassName("icon")[0];
+
+        // Add an event listener for the 'click' event on the icon element
+        icon.addEventListener('click', responsive_control);
+
+        // Function to control the responsiveness of the navigation bar
+        function responsive_control() {
+            // Get the element with the id "myTopnav"
+            let x = document.getElementById("myTopnav");
+
+            // Check if the class name of the element is "topnav"
+            if (x.className === "topnav") {
+            // If it is, add the "responsive" class to the element
+            x.className += " responsive";
+          } else {
+            // If it's not, remove the "responsive" class from the element
+            x.className = "topnav";
+          }
+        }
+        // END OF NAVIGATION
         const map = new mapboxgl.Map({
             container: 'map',
             style: 'mapbox://styles/mapbox/light-v11',
