--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@
             </div>
         </div>
     </div>
-     <script src="js/main.js"></script>
+     <script src="js/seattle.js"></script>
 </body>
 </html>
