--- a/nyc.html
+++ b/nyc.html
@@ -176,7 +176,7 @@
         });
 
         const collisionGeojsonFiles = {
-            2020: 'assets/Optimized_nyc_crashes_2020.geojson',
+            2020: 'assets/nyc_crashes_2020.geojson',
             2021: 'assets/Optimized_nyc_crashes_2021.geojson',
             2022: 'assets/Optimized_nyc_crashes_2022.geojson',
             2023: 'assets/Optimized_nyc_crashes_2023.geojson',
