--- a/nyc.html
+++ b/nyc.html
@@ -143,7 +143,7 @@
 
     const map = new mapboxgl.Map({
         container: 'map',
-        style: 'mapbox://styles/mapbox/dark-v11',
+        style: 'mapbox://styles/edwardp7/cm868lju6007p01ssecfoavmb',
         center: [-74.006, 40.7128],
         zoom: 10
     });
@@ -248,6 +248,7 @@
             clusterRadius: 50
         });
 
+        // Add collision clusters after heatmap
         map.addLayer({
             id: 'collision-cluster',
             type: 'circle',
@@ -298,7 +299,7 @@
             }
         });
 
-        // Check the current state of the toggle and apply visibility
+        // Toggle visibility based on checkbox
         const isCrashLayerVisible = document.getElementById('toggleCrashLayer').checked;
         const visibility = isCrashLayerVisible ? 'visible' : 'none';
         map.setLayoutProperty('collision-cluster', 'visibility', visibility);
