--- a/nyc.html
+++ b/nyc.html
@@ -115,7 +115,7 @@
         <input id="yearSlider" type="range" min="2020" max="2023" step="1" value="2020">
         <div>
             <input type="checkbox" id="toggleCrashLayer">
-            <label for="toggleCrashLayer">Show Collision Clusters</label>
+            <label for="toggleCrashLayer">Show Collision Heat Map</label>
         </div>
         <div id="legend">
             <h3>Average Annual Daily Traffic</h3>
