--- a/conclusion.html
+++ b/conclusion.html
@@ -126,21 +126,9 @@
     <!-- Conclusion Section -->
     <div class="conclusion">
         <h1>Conclusion</h1>
-        <p>In conclusion...</p>
-
-        <p>Header:</p>
-        <ul>
-            <li>Bullet Point 1...</li>
-            <li>Bullet Point 2...</li>
-            <li>Bullet Point 3...</li>
-        </ul>
-
-        <p>etc:</p>
-        <ul>
-            <li>etc</li>
-            <li>etc</li>
-            <li>etc</li>
-        </ul>
+        <p>The comparative analysis of traffic flow in Seattle and New York City from 2020 to 2023 reveals key insights into urban mobility patterns in two major metropolitan areas in the United States. By visualizing these shifts through interactive maps, this project provides valuable insights for urban planners and policymakers to develop data-driven strategies for improving traffic management. Future research could expand this analysis by incorporating additional factors such as public transit ridership, as well as environmental impacts in order to further reduce traffic and the challenges that come with it. Thank you for taking the time to learn more about the major issue of traffic congestion in United States cities. We hope you enjoyed our project. 
+        </p>
+        <img src="https://komonews.com/resources/media2/16x9/full/1015/center/80/1ea23051-4569-4c81-9043-104c405a1c2f-large16x9_TRAFFICHEAVYWOF.new.01_frame_970.jpeg" alt="Descriptive text about the image" style="display: block; margin: 20px auto; max-width: 100%;">
     </div>
     <script>
         function responsive_control() {
