--- a/intro.html
+++ b/intro.html
@@ -153,7 +153,7 @@
         <p class="project-author">By: Andrew Hoch, Cameron Smutz, Edward Park, Leo Shi, Peter Pham</p>
         <p class="project-date">Date: March 12, 2025</p>
         <p class="project-description">
-            Project desc...
+            This project analyzes and visualizes traffic flow patterns in Seattle and New York City from 2020 to 2023. Using interactive maps, the project highlights year-over-year changes in traffic congestion, as well as vehicle crashes in both major cities. By incorporating data from transportation agencies, the project aims to identify trends in traffic congestion. The two maps created provide a view of how traffic evolved in these two major metropolitan areas, offering insights for urban planners, policymakers, and commuters. Hope you enjoy our project!
         </p>
     </div>
 
