--- a/intro.html
+++ b/intro.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Description</title>
+    <link rel="icon" type="image/png" href="assets/Traffic_Project_Favicon.png">
     <style>
         /* Reset and base styling */
         * {
