--- a/nyc.html
+++ b/nyc.html
@@ -8,6 +8,9 @@
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.js"></script>
     <style>
         /* NAVIGATION STYLING */
         .topnav {
@@ -90,11 +93,17 @@
             height: 12px;
             margin-right: 5px;
             border-radius: 50%;
-            border: 1px solid black;
         }
 
         .blue-dot {
             background: #0000FF;
+        }
+
+        #chart {
+            position: absolute;
+            top: 350px;
+            left: 30px;
+            width: 300px;
         }
     </style>
 </head>
@@ -126,6 +135,7 @@
             <p><span class="legend-key" style="background: rgb(239,243,255);"></span>100,000+</p>
         </div>
     </div>
+    <div id="chart"></div>
     <script src="js/nyc.js"></script>
 </body>
 </html>
