--- a/nyc.html
+++ b/nyc.html
@@ -136,6 +136,7 @@
             <p><span class="legend-key" style="background: rgb(239,243,255);"></span>100,000+</p>
         </div>
         <div id="chart"></div>
+        <p>Zoom in and click on a blue dot to display street name and traffic count.</p>
     </div>
     <script src="js/nyc.js"></script>
 </body>
