--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <p><span class="legend-key" style="background: rgb(239,243,255);"></span>100,000+</p>
         </div>
         <p>Zoom in and click on a blue dot to display street name and traffic count.</p>
+        <div id="chart"></div>
     </div>
     <script src="js/seattle.js"></script>
 </body>
