--- a/nyc.html
+++ b/nyc.html
@@ -11,102 +11,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.16.0/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.7.20/c3.min.js"></script>
-    <style>
-        /* NAVIGATION STYLING */
-        .topnav {
-          background-color: rgb(0, 0, 0);
-          overflow: hidden;
-        }
-
-        .topnav a {
-          float: left;
-          display: block;
-          color: #f2f2f2;
-          text-align: center;
-          padding: 14px 16px;
-          text-decoration: none;
-          font-size: 26px;
-        }
-
-        .topnav a:hover {
-          background-color: #ddd;
-          color: black;
-        }
-
-        .topnav a.active {
-          background-color: #002fff;
-          color: white;
-        }
-
-        .topnav .icon {
-          display: none;
-        }
-
-        .topnav.responsive {
-            position: relative;
-        }
-
-        .topnav.responsive a.icon {
-            position: absolute;
-            right: 0;
-            top: 0;
-        }
-
-        .topnav.responsive a {
-            float: none;
-            display: block;
-            text-align: left;
-        }
-
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-        }
-
-        #map {
-            position: absolute;
-            top: 50px;
-            bottom: 0;
-            width: 100%;
-        }
-
-        #controls {
-            position: absolute;
-            top: 60px;
-            left: 30px;
-            background: rgba(255, 255, 255, 0.9);
-            padding: 15px 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-            width: 300px; /* Extend the width to fit the chart */
-        }
-
-        #legend {
-            margin-top: 15px;
-            font-size: 14px;
-        }
-
-        .legend-key {
-            display: inline-block;
-            width: 12px;
-            height: 12px;
-            margin-right: 5px;
-            border-radius: 50%;
-            border: 1px solid black;
-        }
-
-        .blue-dot {
-            background: #0000FF;
-        }
-
-        #chart {
-            margin-top: 15px; /* Add some margin above the chart */
-            width: 100%; /* Ensure the chart takes the full width of the container */
-        }
-
-    </style>
+    <link rel="stylesheet" href="css/nyc.css" />
 </head>
 <body>
     <div class="topnav" id="myTopnav">
